texturefiles = base2.bmp base3.bmp base3.png base.bmp board2.bmp \
               board3.bmp board.bmp checker2.bmp checker.bmp hinge.bmp \
               logo2.bmp logo.bmp aboard.bmp aboard2.bmp total.bmp hinge2.bmp \
               Grass01.png wavesand01.png Water01.png EarthSand01.png
texturesdir = $(pkgdatadir)/textures
textures_DATA = $(texturefiles)
EXTRA_DIST = $(texturefiles)

