texturefiles = logo.png alder.png ash.png berch.png \
		felt.png hinge.png hinge2.png maple.png marble.png oak.png \
		pine.png pine2.png redwood.png stain.png suede.png swirl.png \
		Grass01.png wavesand01.png Water01.png EarthSand01.png \
		wood.png checkered.png
texturesdir = $(pkgdatadir)/textures
textures_DATA = $(texturefiles)
EXTRA_DIST = $(texturefiles)

