# $Id$

EXTRA_DIST= allgames.xpm beaver.xpm dice.xpm gnubg-big.xpm gnu.xpm hint_alt.xpm leftarrow.xpm nextgame.xpm nextmarked.xpm nextmove.xpm prevgame.xpm prevmarked.xpm prevmove.xpm question.xpm resigns.xpm resign.xpm rightarrow.xpm stock_cancel.xpm stock_edit.xpm stock_export.xpm stock_import.xpm stock_new_all.xpm stock_new_money.xpm stock_new.xpm stock_ok.xpm stock_open.xpm stock_save.xpm stock_stop_16.xpm stock_stop.xpm stock_undo_16.xpm stock_undo.xpm tb_anticlockwise.xpm tb_clockwise.xpm tb_double.xpm tb_edit.xpm tb_no.xpm tb_redouble.xpm tb_roll.xpm tb_stop.xpm tb_undo.xpm tb_yes.xpm x.xpm
